add usepackage flushend

--- a/manuscript.tex
+++ b/manuscript.tex
@@ -69,7 +69,7 @@
 \usepackage{natbib}
 \setlength{\bibsep}{0pt}
 
-\usepackage{balance}
+\usepackage{flushend}
 
 \title{
 	\vspace{-1.3em}
@@ -234,7 +234,6 @@ Reference to a chapter in an edited book\cite{chap}.\\
 Reference to a website\cite{web}.
 
 \bibliographystyle{unsrt}
-\balance
 \bibliography{reference}
 
 % \begin{thebibliography}{9}
